Improved searching for ingredients. slightly rearranged layout, more js quality of life improvements

--- a/website/templates/create-recipe.html
+++ b/website/templates/create-recipe.html
@@ -32,17 +32,28 @@
     </div>
     
     <br/>
-    <h3 align="center">Add ingredients</h3>
-    <div class="input-group">
-        <select class="form-select" id="ingredient" aria-label="Select ingredient">
-            <option selected>Choose...</option>
-            {% for food in foods %}
-            <option id="{{food.fdc_id}}" value="{{food.name}}">{{food.name}}</option>
-            {% endfor %}
-        </select>
-        <input type="button" value="&plus;" class="btn btn-outline-secondary" id="add_ingredient"/>
-    </div>
+    <h3 align="center">Ingredients</h3>
+    <br/>
+    <p class="text-center" id="emptyListMessage">Ingredients list is empty. Add an ingredient using the dropdown below</p>
     <ul name="recipe-ingredients" id="recipe-ingredients" class="list-group list-group-flush"></ul>
+    <br/>
+    <h4 align="center">Add ingredients</h4>
+    <!-- <div class="input-group">
+        <input type="button" value="&plus;" class="btn btn-outline-secondary" id="add_ingredient"/>
+    </div> -->
+
+    <div class="d-flex flex-column" id="searchListWrapper">
+        <div class="m-3">
+            <input type="text" class="form-control" placeholder="Search..." id="searchInput">
+        </div>
+        <ul class="list-group" id="foodsList" style="max-height: 50vh; overflow-y: scroll;">
+            {% for food in foods %}
+            <li class="list-group-item m-0 p-0">
+                <button type="button" class="list-group-item list-group-item-action" style="border-color: transparent;" id="{{food.fdc_id}}" value="{{food.name}}" onclick="clickOptionTest(this)">{{food.name}}</button>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
     <br/>
     <div align="center">
         <button type="submit" class="btn btn-primary">Add recipe</button>
